# django-rest-framework-simplify

./: .coverage  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  LICENSE.md  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
rest_framework_simplify/: apps.py  decorators.py  errors.py  exceptions.py  fields.py  forms.py  handler.py  helpers.py  mapper.py  models.py  serializer.py  signature.py  views.py
rest_framework_simplify/models/: __init__.py  rd_document.py  simplify_model.py
rest_framework_simplify/serializer/: __init__.py  mongo.py  sql_engine.py
rest_framework_simplify/services/sql_executor/: exceptions.py  service.py  tests.py
test_app/: email_templates.py  forms.py  models.py  permissions.py  views.py
test_app/migrations/: 0001_initial.py  0002_onetooneclass.py  0003_requestfieldsaveclass.py  0004_childclass_active.py  0005_auto_20180515_0500.py  0006_auto_20180515_0618.py  0007_auto_20180816_1821.py  0008_modelwithparentresource.py  0009_encryptedclassnodisplaychars.py  0010_basicclass_created.py  0011_basicclass_binary_field.py  0012_jsontextfieldclass.py  0013_auto_20190726_1738.py  0014_auto_20200108_0023.py  0014_nestedchild.py  0015_application_active.py  0015_childclass_active.py  0015_childclass_active_modelwithparentresource_active.py  0016_modelwithparentresource_active.py
test_app/templates/: EmailWithExtraSimplifyML.html
test_app/tests/: helpers.py  test_fields.py  test_forms.py  test_handler.py  test_mapper.py  test_models.py  test_parser.py  test_views.py
test_proj/: router.py  settings.py  urls.py  wsgi.py
tests/: apps.py  email_templates.py  forms.py  models.py  test_settings.py  urls.py  views.py
tests/migrations/: 0001_initial.py
tests/templates/: DynamicEmail.html  without-send-email-method.html
tests/tests/: helpers.py  test_fields.py  test_forms.py  test_models.py  test_sql_executor.py  test_views.py
